--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -1031,4 +1031,4 @@ section {
   .controls .control {
     margin: 0.6rem 1rem !important;
   }
-}/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=Styles.css.map */
