--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -73,7 +73,7 @@ section {
 
 .section {
   transform: translateY(-100%) scale(0);
-  transition: all 0.1s ease-in-out;
+  transition: all 1s ease-in-out;
   background: #3a6186; /* fallback for old browsers */ /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #89253e, #3a6186); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
@@ -189,6 +189,7 @@ section {
   align-items: center;
   position: relative;
   justify-content: center;
+  padding-bottom: 0rem;
   /*  .h-shape{
         transition: all .4s ease-in-out;
         width: 80%;
@@ -203,27 +204,26 @@ section {
     }*/
 }
 .header-content .left-header .image {
-  height: 60vh;
-  width: 60vh;
-  border-radius: var(--br-sm-2);
-  height: 90%;
-  width: 50%;
-  margin-left: 4rem;
+  height: 40vh;
+  width: 45vh;
+  height: 60%;
+  width: 40%;
   background-color: var(--color-gradient2);
   border: solid 3px;
   overflow: hidden;
   border-radius: 50%;
+  align-items: center;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-  /*background-color: var(--color-black);*/
-  transition: all 0.4s ease-in-out;
+  /*background-color: var(--color-black);
+  transition: all .0s ease-in-out;*/
+  padding-bottom: 0;
 }
 .header-content .left-header .image img {
-  border-radius: var(--br-sm-2);
+  align-items: center;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  transition: all 0.4s ease-in-out;
   /*filter: grayscale(100%);
   &:hover{
        filter:grayscale(0)
@@ -235,19 +235,273 @@ section {
   flex-direction: column;
   justify-content: center;
   padding-right: 18rem;
-  padding-left: 2rem;
+  padding-left: 18rem;
+  padding-top: 0;
 }
 .header-content .right-header .name {
   font-size: 3rem;
   padding-left: 0rem;
-  text-align: left;
+  text-align: center;
+  padding-bottom: 1rem;
 }
 .header-content .right-header .name span {
   color: var(--color-gradient2);
 }
 .header-content .right-header .name p {
+  padding: 0 1.5rem;
   margin: 1.5rem 0;
   line-height: 2rem;
+  text-align: center;
+  padding-bottom: 20rem;
+  text-justify: inter-word;
+}
+
+/*about*/
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 3.5rem;
+  padding-bottom: 5rem;
+}
+.about-container .right-about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+.about-container .right-about .about-item {
+  border: 1px solid var(--color-grey-5);
+  border-radius: 5px;
+  transition: all 0.4s ease-in-out;
+  box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+}
+.about-container .right-about .about-item:hover {
+  cursor: default;
+  transform: tralateY(-5px);
+  border: 1px solid var(--color-secondary);
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+}
+.about-container .right-about .about-item .abt-text {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+}
+.about-container .right-about .about-item .abt-text .large-text {
+  font-size: 3rem;
+  font-weight: 700;
+  color: var(--color-secondary);
+}
+.about-container .right-about .about-item .abt-text .small-text {
+  padding-left: 3rem;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  color: var(--color-grey-1);
+  letter-spacing: 2px;
+}
+.about-container .right-about .about-item .abt-text .small-text::before { /* small line  before*/
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 15px;
+  width: 2rem;
+  height: 2px;
+  background-color: var(--color-grey-5);
+}
+.about-container .left-about {
+  padding-right: 5rem;
+}
+.about-container .left-about p {
+  line-height: 2rem;
+  padding: 1rem;
+  color: var(--color-grey-1);
+}
+.about-container .left-about h4 {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+.about-stats {
+  padding-bottom: 4rem;
+}
+.about-stats .progress-bars {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+.about-stats .progress-bars .progress-bar {
+  display: flex;
+  flex-direction: column;
+}
+.about-stats .progress-bars .progress-bar .prog-title {
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.about-stats .progress-bars .progress-bar .progress-con {
+  display: flex;
+  align-items: center;
+}
+.about-stats .progress-bars .progress-bar .progress-con .prog-text {
+  color: var(--color-grey-2);
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress {
+  width: 100%;
+  height: 0.45rem;
+  background-color: var(--color-grey-4);
+  margin-left: 1rem;
+  position: relative;
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: var(--color-white);
+  transition: all 0.4s ease-in-out;
+  width: 60%;
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress .html {
+  width: 60%;
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress .css3 {
+  width: 50%;
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress .JavaScript {
+  width: 25%;
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress .Java {
+  width: 50%;
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress .Bootstrap {
+  width: 30%;
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress .Canva {
+  width: 40%;
+}
+
+.stat-title {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  text-align: center;
+  padding: 3.5rem 0;
+  position: relative;
+}
+.stat-title::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 0;
+  width: 40px;
+  height: 1px;
+  background-color: var(--color-grey-5);
+  transform: translateX(-50%);
+}
+
+/*Timeline*/
+.timeline {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  padding-bottom: 3rem;
+}
+.timeline .timeline-item {
+  position: relative;
+  padding-left: 3rem;
+  border-left: 1px solid var(--color-grey-5);
+}
+.timeline .timeline-item .tl-icon {
+  position: absolute;
+  left: -27px;
+  top: 0;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: var(--color-secondary);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.timeline .timeline-item .tl-icon i {
+  font-size: 1.2rem;
+}
+.timeline .timeline-item .tl-duration {
+  padding: 0.2rem 0.6rem;
+  background-color: var(--color-grey-4);
+  border-radius: 15px;
+  display: inline-block;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.timeline .timeline-item h5 {
+  padding: 1rem 0;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.timeline .timeline-item h5 span {
+  color: var(--color-grey-2);
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+.timeline .timeline-item p {
+  color: var(--color-grey-2);
+}
+
+.port-text {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.portfolios {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 3rem;
+}
+.portfolios .portfolio-item {
+  position: relative;
+  border-radius: 15px;
+}
+.portfolios .portfolio-item img {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  padding-bottom: 0;
+}
+.portfolios .portfolio-item img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all 0.4s ease-in-out;
+  /*filter: grayscale(100%);
+  &:hover{
+       filter:grayscale(0)
+
+  }*/
+}
+.portfolios .right-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-right: 18rem;
+  padding-left: 18rem;
+  padding-top: 0;
+}
+.portfolios .right-header .name {
+  font-size: 3rem;
+  padding-left: 0rem;
+  text-align: center;
+}
+.portfolios .right-header .name span {
+  color: var(--color-gradient2);
+}
+.portfolios .right-header .name p {
+  padding: 0 1.5rem;
+  margin: 1.5rem 0;
+  line-height: 2rem;
+  text-align: center;
 }
 
 /*about*/
@@ -1031,4 +1285,4 @@ section {
   .controls .control {
     margin: 0.6rem 1rem !important;
   }
-}/*# sourceMappingURL=Styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
