--- a/Styles/Styles.scss
+++ b/Styles/Styles.scss
@@ -82,7 +82,7 @@ section{
 
 .section{
     transform: translateY(-100%) scale(0);
-    transition: all .1s ease-in-out;
+    transition: all 1s ease-in-out;
     background: #3a6186;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #89253e, #3a6186);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #89253e, #3a6186); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -201,11 +201,13 @@ section{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         min-height: 100vh;
+       
             .left-header{
                 display:flex;
                 align-items: center;
                 position:relative;
                 justify-content: center;
+                padding-bottom:0rem;
               /*  .h-shape{
                     transition: all .4s ease-in-out;
                     width: 80%;
@@ -219,25 +221,28 @@ section{
                    // clip-path: polygon(100% 53%, 50% 100%, 0 43%, 49% 0);
                 }*/
                 .image{
-                height: 60vh;
-                width: 60vh;
-                border-radius: var(--br-sm-2);
-                height:90%;  
-                width: 50%;
-                margin-left: 4rem;
+                height: 40vh;
+                width: 45vh;
+                height:60%;  
+                width: 40%;
                 background-color: var(--color-gradient2);
                 border: solid 3px;
                 overflow: hidden;
                 border-radius: 50%;
+                align-items: center;
                 box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-                /*background-color: var(--color-black);*/
-                transition: all .4s ease-in-out;
+                /*background-color: var(--color-black);
+                transition: all .0s ease-in-out;*/
+
+              
+                padding-bottom: 0;
                 img{
-                    border-radius: var(--br-sm-2);
+                    align-items: center;
                     width: 100%;
                     height: 100%;
                     object-fit: cover ;
-                    transition: all .4s ease-in-out;
+                    //transition: all .4s ease-in-out;
+                    
                     /*filter: grayscale(100%);
                     &:hover{
                          filter:grayscale(0)
@@ -253,18 +258,294 @@ section{
             flex-direction: column;
             justify-content: center;
             padding-right: 18rem;
-            padding-left: 2rem;
+            padding-left: 18rem;
+            padding-top: 0;
             
             .name{
+               
                  font-size: 3rem;
                  padding-left: 0rem;
-                 text-align:left;
+                 text-align:center;
+                
+                 padding-bottom: 1rem ;
                  span{
                     color: var(--color-gradient2);
                  }
                  p{
+                    padding: 0 1.5rem;
                     margin: 1.5rem 0;
                     line-height: 2rem;
+                    text-align: center;
+                    padding-bottom: 20rem;
+                    text-justify: inter-word;
+                   
+                 }
+
+
+            }
+         }
+    }
+
+
+
+
+/*about*/
+.about-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 3.5rem;
+    padding-bottom: 5rem;
+    .right-about{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 2rem;
+        .about-item{
+            border:1px solid var(--color-grey-5);
+            border-radius: 5px;
+            transition: all .4s ease-in-out;
+            box-shadow: 1px 2px 15px rgba(0,0,0,.1);
+            &:hover{
+                cursor: default;
+                transform:tralateY(-5px);
+                border:1px solid var(--color-secondary);
+                box-shadow: 1px 4px 15px rgba(0,0,0,.32);
+            }
+            .abt-text{
+                padding: 1.5rem;
+                display: flex;
+                flex-direction: column;
+                .large-text{
+                    font-size: 3rem;
+                    font-weight: 700;
+                    color:var(--color-secondary);
+                }
+                .small-text{
+                    padding-left: 3rem;
+                    position: relative;
+                    text-transform: uppercase;
+                    font-size: 1.2rem;
+                    color:var(--color-grey-1);
+                    letter-spacing: 2px;
+                    &::before{ /* small line  before*/
+                        content: '';
+                        position: absolute;
+                        left:0;
+                        top: 15px;
+                        width: 2rem;
+                        height: 2px;
+                        background-color: var(--color-grey-5);
+                    }
+                }
+            }
+
+        }
+
+    }
+
+    .left-about{
+        padding-right: 5rem ;
+        p{
+            line-height: 2rem;
+            padding: 1rem;
+            color: var(--color-grey-1);
+        }
+        h4{
+            font-size: 2rem;
+            text-transform: uppercase;
+        }
+    }
+}
+.about-stats{
+    padding-bottom: 4rem;
+    .progress-bars{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+        .progress-bar{
+            display: flex;
+            flex-direction: column;
+            .prog-title{
+                text-transform: uppercase;
+                font-weight: 500;
+            }
+            .progress-con{
+                display:flex;
+                align-items: center;
+                .prog-text{
+                    color:var(--color-grey-2);
+                }
+                .progress{
+                    width: 100%;
+                    height: .45rem;
+                    background-color: var(--color-grey-4);
+                    margin-left: 1rem;
+                    position: relative;
+                    span{
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        height: 100%;
+                        background-color: var(--color-white);
+                        transition: all .4s ease-in-out;
+                        width: 60%;
+            
+                    }
+                    .html{
+                        width: 60%;
+                    }
+                    .css3{
+                        width: 50%;
+                    }
+                    .JavaScript{
+                        width: 25%;
+                    }
+                    .Java{
+                        width: 50%;
+                    }
+                    .Bootstrap{
+                        width: 30%;
+                    }
+                    .Canva{
+                        width: 40%;
+                    }
+                }
+
+            }
+
+         }
+        }
+
+    }
+
+.stat-title{
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    text-align: center;
+    padding: 3.5rem 0;
+    position: relative;
+    &::before{ 
+        content: '';
+        position: absolute;
+        left:50%;
+        top: 0;
+        width: 40px;
+        height: 1px;
+        background-color: var(--color-grey-5);
+        transform: translateX(-50%) ;
+    }
+}
+/*Timeline*/
+.timeline{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap:2rem;
+    padding-bottom: 3rem;
+    .timeline-item{
+        position: relative;
+        padding-left: 3rem;
+        border-left: 1px solid var(--color-grey-5);
+        .tl-icon{
+            position: absolute; 
+            left: -27px;
+            top: 0;
+            height: 50px;
+            width: 50px;
+            border-radius: 50%;
+            background-color: var(--color-secondary);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            i{
+                font-size: 1.2rem;
+            }
+        }
+            .tl-duration{
+                padding: .2rem .6rem;
+                background-color:var(--color-grey-4);
+                border-radius: 15px;
+                display: inline-block;
+                font-size: .8rem;
+                text-transform: uppercase;
+                font-weight: 500;
+               
+        }
+        h5{
+            padding: 1rem 0;
+            text-transform: uppercase;
+            font-size: 1.3rem;
+            font-weight: 600;
+            span{
+                color:var(--color-grey-2);
+                font-weight:500;
+                font-size: 1.2rem;
+            }
+        }
+        p{
+            color: var(--color-grey-2);
+        }
+
+
+    }
+}
+
+//portfolios
+.port-text{
+    padding: 2rem 0;
+    text-align: center;
+}
+.portfolios{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 2rem;
+    margin-top: 3rem;
+    .portfolio-item{
+        position: relative;
+        border-radius: 15px;
+        img{
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+
+              
+                padding-bottom: 0;
+                img{
+                    
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover ;
+                    transition: all .4s ease-in-out;
+                    
+                    /*filter: grayscale(100%);
+                    &:hover{
+                         filter:grayscale(0)
+
+                    }*/
+                }
+                              
+            }
+
+         }
+         .right-header{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding-right: 18rem;
+            padding-left: 18rem;
+            padding-top: 0;
+            
+            .name{
+               
+                 font-size: 3rem;
+                 padding-left: 0rem;
+                 text-align:center;
+                 span{
+                    color: var(--color-gradient2);
+                 }
+                 p{
+                    padding: 0 1.5rem;
+                    margin: 1.5rem 0;
+                    line-height: 2rem;
+                    text-align: center;
                    
                  }
 
