--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -6,44 +6,46 @@
 }
 
 :root {
+  --color-gradient1:rgb(255, 234, 243);
+  --color-gradient2:rgba(148,187,233,1);
+  --color-secondary:rgb(179, 179, 244);
+  --color-white:#0a0909aa;
+  --color-black:rgb(251, 244, 244);
+  --color-grey0: #f8f8f8;
+  --color-grey-1: #dbe1e8;
+  --color-grey-2:#b2becd;
+  --color-grey-4:#889292;
+  --color-grey-5:rgb(72, 106, 147);
+  --color-grey-6: #221f23;
+  --color-dark:rgba(0, 0, 0, 0.473);
+}
+
+.ligth-mode {
   --color-gradient1:rgb(188, 174, 180);
   --color-gradient2:rgb(211, 220, 231);
   --color-white:#fffdfd;
   --color-black:rgb(17, 16, 16);
   --color-grey0: #f8f8f8;
   --color-grey-2:#0f0f0f;
-  --color-grey-3: #6c7983;
   --color-grey-4:#557e9b;
   --color-grey-5:#9f9fb0;
   --color-grey-6: #242729;
-  --color-secondary:rgb(125, 125, 182);
+  --color-secondary:#f18e78;
   --br-sm-2: 14Px;
   --box-shadow-1:0 3px 15px rgba(0,0,0,.3);
-}
-
-.ligth-mode {
-  --color-gradient1:rgb(249, 208, 225);
-  --color-gradient2:rgba(148,187,233,1);
-  --color-secondary:rgb(174, 174, 228);
-  --color-white:#090909;
-  --color-black:rgb(251, 244, 244);
-  --color-grey0: #f8f8f8;
-  --color-grey-1: #dbe1e8;
-  --color-grey-2:#b2becd;
-  --color-grey-3: #6c7983;
-  --color-grey-4:#6690b7;
-  --color-grey-5:rgb(72, 106, 147);
-  --color-grey-6: #221f23;
+  --color-dark:#316879;
 }
 
 body {
-  background: #403A3E; /* fallback for old browsers */ /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #BE5869, #403A3E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  /*background: #403A3E;  /* fallback for old browsers 
+  background: -webkit-linear-gradient(to bottom, #BE5869, #403A3E);   Chrome 10-25, Safari 5.1-6 
+  background: linear-gradient(to bottom, #BE5869, #403A3E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ 
+   W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   font-family: "popins", sans-serif;
   font-size: 1.1rem;
   color: var(--color-black);
   transition: all 0.4s ease-in-out;
+  background: var(--color-dark);
 }
 
 a {
@@ -67,15 +69,19 @@ section {
   left: 0;
   top: 0;
   padding: 3rem 18rem;
-  background: #403A3E; /* fallback for old browsers */ /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #BE5869, #403A3E);
+  background: var(--color-dark);
+  /* background: #403A3E;  /* fallback for old browsers 
+   background: -webkit-linear-gradient(to bottom, #BE5869, #403A3E);  /* Chrome 10-25, Safari 5.1-6 */
+  /*background: linear-gradient(to bottom, #BE5869, #403A3E);*/
 }
 
 .section {
   transform: translateY(-100%) scale(0);
   transition: all 1s ease-in-out;
-  background: #3a6186; /* fallback for old browsers */ /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #89253e, #3a6186); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: var(--color-dark);
+  /* background: #3a6186;  /* fallback for old browsers 
+   background: -webkit-linear-gradient(to left, #89253e, #3a6186);  /* Chrome 10-25, Safari 5.1-6 */
+  /*background: linear-gradient(to left, #89253e, #3a6186); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .sec1 {
@@ -204,12 +210,10 @@ section {
     }*/
 }
 .header-content .left-header .image {
-  height: 40vh;
-  width: 45vh;
-  height: 60%;
-  width: 40%;
+  height: 30vh;
+  width: 30vh;
   background-color: var(--color-gradient2);
-  border: solid 3px;
+  border: solid 1.5px;
   overflow: hidden;
   border-radius: 50%;
   align-items: center;
@@ -226,9 +230,7 @@ section {
      object-fit: cover;
   /*filter: grayscale(100%);
   &:hover{
-       filter:grayscale(0)
-
-  }*/
+      filter:grayscale(0)*/
 }
 .header-content .right-header {
   display: flex;
