--- a/Styles/Styles.scss
+++ b/Styles/Styles.scss
@@ -8,48 +8,53 @@
     
 }
 :root {
+    --color-gradient1:rgb(255, 234, 243);
+    --color-gradient2:rgba(148,187,233,1);
+    --color-secondary:rgb(179, 179, 244);
+    --color-white:#0a0909aa;
+    --color-black:rgb(251, 244, 244);
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #dbe1e8;
+    --color-grey-2:#b2becd;
+    --color-grey-4:#889292;
+    --color-grey-5:rgb(72, 106, 147);
+    --color-grey-6: #221f23;
+    --color-dark:rgba(0, 0, 0, 0.473);
+   
+
+}
+
+.ligth-mode{
+
     --color-gradient1:rgb(188, 174, 180);
     --color-gradient2:rgb(211, 220, 231);
     --color-white:#fffdfd;
     --color-black:rgb(17, 16, 16);
     --color-grey0: #f8f8f8;
     --color-grey-2:#0f0f0f;
-    --color-grey-3: #6c7983;
     --color-grey-4:#557e9b;
     --color-grey-5:#9f9fb0;
     --color-grey-6: #242729;
-    --color-secondary:rgb(125, 125, 182);
+    --color-secondary:#f18e78;
     --br-sm-2 : 14Px;
     --box-shadow-1:0 3px 15px rgba(0,0,0,.3);
-
-}
-
-.ligth-mode{
+    --color-dark:#316879;
   
-    --color-gradient1:rgb(249, 208, 225);
-    --color-gradient2:rgba(148,187,233,1);
-    --color-secondary:rgb(174, 174, 228);
-    --color-white:#090909;
-    --color-black:rgb(251, 244, 244);
-    --color-grey0: #f8f8f8;
-    --color-grey-1: #dbe1e8;
-    --color-grey-2:#b2becd;
-    --color-grey-3: #6c7983;
-    --color-grey-4:#6690b7;
-    --color-grey-5:rgb(72, 106, 147);
-    --color-grey-6: #221f23;
+    
   
 
 }
 body{
-    background: #403A3E;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #BE5869, #403A3E);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #BE5869, #403A3E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /*background: #403A3E;  /* fallback for old browsers 
+    background: -webkit-linear-gradient(to bottom, #BE5869, #403A3E);   Chrome 10-25, Safari 5.1-6 
+    background: linear-gradient(to bottom, #BE5869, #403A3E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ 
+     W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: 'popins' , sans-serif;
     font-size: 1.1rem;
     color: var(--color-black);
     transition: all .4s ease-in-out;
+    background: var(--color-dark);
+
 }
 
 a{
@@ -74,18 +79,21 @@ section{
     left: 0;
     top: 0;
     padding:3rem 18rem;
-    background: #403A3E;  /* fallback for old browsers */
+    background: var(--color-dark);
+   /* background: #403A3E;  /* fallback for old browsers 
     background: -webkit-linear-gradient(to bottom, #BE5869, #403A3E);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #BE5869, #403A3E);
+    /*background: linear-gradient(to bottom, #BE5869, #403A3E);*/
 
 }
 
 .section{
     transform: translateY(-100%) scale(0);
     transition: all 1s ease-in-out;
-    background: #3a6186;  /* fallback for old browsers */
+    background: var(--color-dark);
+   
+   /* background: #3a6186;  /* fallback for old browsers 
     background: -webkit-linear-gradient(to left, #89253e, #3a6186);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #89253e, #3a6186); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /*background: linear-gradient(to left, #89253e, #3a6186); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     
     
 }
@@ -197,7 +205,8 @@ section{
 }
 
     /*Header-Content*/
-    .header-content{
+    .header-content
+    {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         min-height: 100vh;
@@ -220,40 +229,38 @@ section{
                     z-index:-1;
                    // clip-path: polygon(100% 53%, 50% 100%, 0 43%, 49% 0);
                 }*/
-                .image{
-                height: 40vh;
-                width: 45vh;
-                height:60%;  
-                width: 40%;
-                background-color: var(--color-gradient2);
-                border: solid 3px;
-                overflow: hidden;
-                border-radius: 50%;
-                align-items: center;
-                box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-                /*background-color: var(--color-black);
-                transition: all .0s ease-in-out;*/
-
-              
-                padding-bottom: 0;
-                img{
+                .image
+                {
+                    height: 30vh;
+                    width: 30vh;
+                    background-color: var(--color-gradient2);
+                    border: solid 1.5px;
+                    overflow: hidden;
+                    border-radius: 50%;
                     align-items: center;
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover ;
-                    //transition: all .4s ease-in-out;
-                    
-                    /*filter: grayscale(100%);
-                    &:hover{
-                         filter:grayscale(0)
+                    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+                    /*background-color: var(--color-black);
+                    transition: all .0s ease-in-out;*/
+                    padding-bottom: 0;
+                    img{
+                        align-items: center;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover ;
+                        //transition: all .4s ease-in-out;
+                        
+                        /*filter: grayscale(100%);
+                        &:hover{
+                            filter:grayscale(0)*/
 
-                    }*/
+                        }
                 }
                               
             }
 
-         }
-         .right-header{
+         
+         .right-header
+        {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -284,7 +291,7 @@ section{
 
             }
          }
-    }
+        }
 
 
 
