--- a/Styles/Styles.scss
+++ b/Styles/Styles.scss
@@ -15,7 +15,7 @@
     --color-black:rgb(251, 244, 244);
     --color-grey0: #f8f8f8;
     --color-grey-1: #dbe1e8;
-    --color-grey-2:#b2becd;
+    --color-grey-2:#91b6e3;
     --color-grey-4:#889292;
     --color-grey-5:rgb(72, 106, 147);
     --color-grey-6: #221f23;
@@ -32,13 +32,13 @@
     --color-black:rgb(17, 16, 16);
     --color-grey0: #f8f8f8;
     --color-grey-2:#0f0f0f;
-    --color-grey-4:#557e9b;
-    --color-grey-5:#9f9fb0;
+    --color-grey-4:#add4f1;
+    --color-grey-5:#e3e5ea;
     --color-grey-6: #242729;
-    --color-secondary:#f18e78;
+    --color-secondary:#f3a897;
     --br-sm-2 : 14Px;
     --box-shadow-1:0 3px 15px rgba(0,0,0,.3);
-    --color-dark:#316879;
+    --color-dark:#6398a8;
   
     
   
